fix skills-row__item on small phones

--- a/src/assets/styles/blocks/skill.scss
+++ b/src/assets/styles/blocks/skill.scss
@@ -25,7 +25,7 @@
         justify-content: space-evenly;
         align-items: center;
         @include small-phones {
-            width: 90%;
+            padding: 0 20px;
             flex-wrap: wrap;
         }
     }
